<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/labelBackground"
                    android:paddingLeft="8dp"
                    android:paddingTop="4dp"
                    android:paddingRight="8dp"
                    android:paddingBottom="4dp"
                    android:text="@string/original_title"
                    android:textColor="@color/labelColor"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_original_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/labelBackground"
                    android:paddingLeft="8dp"
                    android:paddingTop="4dp"
                    android:paddingRight="8dp"
                    android:paddingBottom="8dp"
                    android:textSize="40sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:padding="8dp">

                    <ImageView
                        android:id="@+id/iv_Poster_image_thumbnail"
                        android:layout_width="200dp"
                        android:layout_height="fill_parent"
                        android:layout_gravity="center_horizontal"
                        android:adjustViewBounds="true"
                        android:contentDescription="@string/movie_poster"
                        android:scaleType="centerCrop" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:padding="8dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@color/labelBackground"
                            android:paddingLeft="8dp"
                            android:paddingTop="4dp"
                            android:paddingRight="8dp"
                            android:paddingBottom="4dp"
                            android:text="@string/user_rating"
                            android:textColor="@color/labelColor"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tv_user_rating"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingLeft="8dp"
                            android:paddingTop="4dp"
                            android:paddingRight="8dp"
                            android:paddingBottom="8dp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@color/labelBackground"
                            android:paddingLeft="8dp"
                            android:paddingTop="4dp"
                            android:paddingRight="8dp"
                            android:paddingBottom="4dp"
                            android:text="@string/release_date"
                            android:textColor="@color/labelColor"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tv_release_date"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingLeft="8dp"
                            android:paddingTop="4dp"
                            android:paddingRight="8dp"
                            android:paddingBottom="8dp" />

                        <Button
                            android:id="@+id/add_favorite_movie"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:onClick="addFavoriteMovie"
                            android:paddingLeft="8dp"
                            android:paddingTop="4dp"
                            android:paddingRight="8dp"
                            android:paddingBottom="8dp"
                            android:text="@string/add_favorite_movie" />
                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/labelBackground"
                    android:paddingLeft="8dp"
                    android:paddingTop="4dp"
                    android:paddingRight="8dp"
                    android:paddingBottom="4dp"
                    android:text="@string/a_plot_synopsis"
                    android:textColor="@color/labelColor"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_a_plot_synopsis"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="8dp"
                    android:paddingTop="4dp"
                    android:paddingRight="8dp"
                    android:paddingBottom="8dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:background="@android:color/darker_gray" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <include layout="@layout/activity_detail_movie_rvt" />
                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <include layout="@layout/activity_detail_movie_rvr" />
                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>
</FrameLayout>
